--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -211,3 +211,8 @@ mark_shiguangchongsheng: 'https://seer2-resource.yuuinih.com/png/markImage/3198.
 mark_yuecuoyueyong: 'https://seer2-resource.yuuinih.com/png/markImage/3065.png'
 mark_huohuanzhixin: 'https://seer2-resource.yuuinih.com/png/markImage/3071.png'
 mark_zhenkongzhixin: 'https://seer2-resource.yuuinih.com/png/markImage/3072.png'
+mark_guangzhiquan: 'https://seer2-resource.yuuinih.com/png/markImage/3204.png'
+mark_guangwushentong: 'https://seer2-resource.yuuinih.com/png/markImage/3205.png'
+mark_guangwulingtong: 'https://seer2-resource.yuuinih.com/png/markImage/3206.png'
+mark_lingtongchuanda: 'https://seer2-resource.yuuinih.com/png/markImage/3207.png'
+mark_guanghudun: 'https://seer2-resource.yuuinih.com/png/markImage/4016.png'
