--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -220,7 +220,7 @@ skill_zhuoshao: 'https://seer2-resource.yuuinih.com/sound/skill/04_2_001.mp3'
 skill_rongjiezhiyan: 'https://seer2-resource.yuuinih.com/sound/skill/04_2_001.mp3'
 skill_huoyanchongzhuang: 'https://seer2-resource.yuuinih.com/sound/skill/04_1_001.mp3'
 skill_shuangguihuopao: 'https://seer2-resource.yuuinih.com/sound/skill/04_2_002.mp3'
-skill_lieyanzhiju: 'https://seer2-resource.yuuinih.com/sound/skill/04_3_001.mp3'
+skill_lieyanzhiqu: 'https://seer2-resource.yuuinih.com/sound/skill/04_3_001.mp3'
 skill_huoyanxuanfeng: 'https://seer2-resource.yuuinih.com/sound/skill/04_3_003.mp3'
 skill_mijisaoshe: 'https://seer2-resource.yuuinih.com/sound/skill/04_2_003.mp3'
 skill_chaodahuoqiu: 'https://seer2-resource.yuuinih.com/sound/skill/04_3_003.mp3'
@@ -712,3 +712,19 @@ skill_zhenkongzhihuan: 'https://seer2-resource.yuuinih.com/sound/skill/04_2_003.
 skill_zhenkongzhizhua: 'https://seer2-resource.yuuinih.com/sound/skill/04_1_003.mp3'
 skill_huohuanzhili: 'https://seer2-resource.yuuinih.com/sound/skill/04_3_003.mp3'
 skill_zhenkongsuzhao: 'https://seer2-resource.yuuinih.com/sound/skill/04_1_003.mp3'
+skill_guangdan: 'https://seer2-resource.yuuinih.com/sound/skill/12_2_001.mp3'
+skill_guangzhiquan: 'https://seer2-resource.yuuinih.com/sound/skill/12_3_002.mp3'
+skill_guangwushentong: 'https://seer2-resource.yuuinih.com/sound/skill/12_1_003.mp3'
+skill_shentongchuanda: 'https://seer2-resource.yuuinih.com/sound/skill/12_1_002.mp3'
+skill_guangsu: 'https://seer2-resource.yuuinih.com/sound/skill/12_3_003.mp3'
+skill_guangwulingtong: 'https://seer2-resource.yuuinih.com/sound/skill/12_2_003.mp3'
+skill_guangliechong: 'https://seer2-resource.yuuinih.com/sound/skill/12_1_001.mp3'
+skill_shenguanghuti: 'https://seer2-resource.yuuinih.com/sound/skill/12_3_001.mp3'
+skill_lingtongchuanda: 'https://seer2-resource.yuuinih.com/sound/skill/12_2_003.mp3'
+skill_guangzhili: 'https://seer2-resource.yuuinih.com/sound/skill/12_3_001.mp3'
+skill_guangyuandan: 'https://seer2-resource.yuuinih.com/sound/skill/12_2_001.mp3'
+skill_guangwushenlingtong: 'https://seer2-resource.yuuinih.com/sound/skill/11159.mp3'
+skill_shenguangliechong: 'https://seer2-resource.yuuinih.com/sound/skill/12_1_003.mp3'
+skill_shenguangyuandan: 'https://seer2-resource.yuuinih.com/sound/skill/12_2_001.mp3'
+skill_guangsuliechong: 'https://seer2-resource.yuuinih.com/sound/skill/12_1_002.mp3'
+skill_guangsufeidan: 'https://seer2-resource.yuuinih.com/sound/skill/12_2_003.mp3'
